zig-pkg/zig-0.0.0-Fp4XJG_h5A3OLpPXqVTJ1DRl3lZhqHp_fClrI7MUVjU_/test/cases/compile_errors/struct_uses_sizeof_self_as_array_len.zig
const S = struct {
    a: *[@sizeOf(S)]u8,
};
comptime {
    _ = @as(S, undefined);
}

// error
//
// :2:18: error: type 'tmp.S' depends on itself for size query here
